C-ify the syntax