@@ -3,56 +3,63 @@
 Spooky is a simple programming language with an accompanying compiler and virtual machine.
 
 ## Requirements
+
 To run the compiler, you need to have Java 14 installed.
 
 ## Usage
+
 To compile the source `source.spooky` into the compiled file `exec.spook`, run
+
 ```
-java --enable-preview -jar spooky.jar compile source.spooky exec.spook
+spooky compile source.spooky exec.spook
 ```
 
 To execute the program, run
+
 ```
-java --enable-preview -jar spooky.jar run exec.spook
+spooky spooky.jar run exec.spook
 ```
 
 ## Language features
-The language is very bare bones right now, only supporting basics such as variables, functions, loops, conditionals and some simple expressions.
+
+Spooky is a bare-bones C-like language, supporting only basics such as variables, functions, loops, conditionals and
+simple expressions.
 While the VM itself is pretty fixed in structure, contributions to the language itself are very welcome.
 In particular, features such as
 
-- more operators, such as `++`
 - arrays
-- character literals
 - string literals
 
 would be nice.
 
 ## External functions
+
 When executing programs, a set of external functions may optionally be provided.
 These are declared as `extern` functions in your source and provided by the execution environment.
 
 ## Example programs
-```scala
-extern printInt(i: Int)
-extern print(ch: Int)
 
-func isPrime(n: Int) -> Boolean {
-  p: Int = 1;
-  for (i: Int = 2; i * i <= n; i = i + 1) {
-    if (n % i == 0) {
-      return false;
+```c
+extern void printInt(int i)
+extern void print(int ch)
+
+bool isPrime(int n) {
+    int p = 1;
+    for (int i = 2; i * i <= n; i++) {
+        if (n % i == 0) {
+            return false;
+        }
     }
   }
   return true;
 }
 
-func main() {
-  for (n: Int = 90; n < 100; n = n + 1) {
-    printInt(n);
-    print(32);
-    printInt(isPrime(n));
-    print(10);
-  }
+void main() {
+    for (int n = 90; n < 100; n++) {
+        printInt(n);
+        print(' ');
+        printInt(isPrime(n));
+        print('\n');
+    }
 }
 ```
